syntax = "proto3";

package envoy.config.filter.listener.tls_inspector.v2;

option java_package = "io.envoyproxy.envoy.config.filter.listener.tls_inspector.v2";
option java_outer_classname = "TlsInspectorProto";
option java_multiple_files = true;

// [#protodoc-title: TLS Inspector Filter]
// Allows detecting whether the transport appears to be TLS or plaintext.
// [#extension: envoy.filters.listener.tls_inspector]

message TlsInspector {
}
